--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.1",
   "description": "sample implementation of a better protocol for node:test runners",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "test": "node --test ./dist"
+    "compile": "tsc -b",
+    "test:runner": "node ./dist/index.js",
+    "test:direct": "node ./dist/test.js"
   },
   "keywords": [
     "node:test",
@@ -17,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   }
 }
