refactor: factor out messaging channel class, organize files a bit

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "compile": "tsc -b",
     "test:runner": "node ./dist/index.js",
-    "test:direct": "node ./dist/test.js"
+    "test:direct": "node ./dist/example.test.js"
   },
   "keywords": [
     "node:test",
